# pandas_alive

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.html  README.ipynb  README.md  anaconda.html  covid-nsw.md  developer.html  example-bar-and-line-chart.gif.REMOVED.git-id  example-barv-chart.gif.REMOVED.git-id  example_dataset_table.md  generate_examples.py  genindex.html  index.html  objects.inv  playground-main.py  py-modindex.html  py38-pandas_alive.yml  pyproject.toml  pytest.ini  pythoncodeblocks.tpl  requirements.txt  search.html  searchindex.js  ssREADME.md
_images/: example-bar-and-line-chart.gif.REMOVED.git-id  example-bar-chart.gif.REMOVED.git-id  example-barh-chart.gif.REMOVED.git-id  example-barv-chart.gif.REMOVED.git-id  example-line-chart.gif.REMOVED.git-id  fixed-example.gif.REMOVED.git-id  perpendicular-example.gif.REMOVED.git-id  summary-func-example.gif.REMOVED.git-id
_modules/: index.html
_sources/: README.rst.txt  index.rst.txt
_static/: documentation_options.js
data/: Aus_Elec_Gen_1980_2018.csv  Newcastle_Australia_Max_Temps.csv  Newcastle_Australia_Min_Temps.csv  Regional Data - Sheet1.csv  grouped.csv  happiness-cantril-ladder.csv  italy-covid-region.gpkg  life-expectancy.csv  multi.csv  nsw-covid-cases-by-postcode.csv  nsw-covid19-cases-by-postcode.gpkg  postcode-data.csv
examples/: example-bar-and-line-chart.gif.REMOVED.git-id  example-bar-and-line-urban-chart.gif.REMOVED.git-id  example-bar-chart.gif.REMOVED.git-id  example-barh-chart.gif.REMOVED.git-id  example-barv-chart.gif.REMOVED.git-id  (+13 more)
(+37 files in other folders)
