[tool.poetry]
name = "pandas_alive"
version = "0.1.14"
description = "Animated plotting extension for Pandas with Matplotlib"
authors = ["JackMcKew <jackmckew2@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/JackMcKew/pandas_alive"
repository = "https://github.com/JackMcKew/pandas_alive"
license = "MIT"
documentation = "https://jackmckew.github.io/pandas_alive/"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
issues = "https://github.com/JackMcKew/pandas_alive/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
